-
Bug
-
Resolution: Done
-
P2: Important
-
5.2.1
-
None
-
134d980a7fcf61c5440019bcfb3fdfc39c3f5f3c
Please run the attached test, and swipe the view so that "number 1" is selected. Then, horizontally enlarge the window, and notice that the currentIndex does not change (as is expected); but when shrinking the window, the currentIndex gets incremented.
This happens only if the shrink is quick; if the shrink happens slowly, the bug won't appear.
- relates to
-
QTBUG-112349 ListView SnapOneItem positioning wrong index in resize time
-
- Reported
-
-
QTBUG-39146 Setting ListView currentIndex doesn't set initial item correctly in certain circumstances
-
- Closed
-
| For Gerrit Dashboard: QTBUG-43555 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 121242,3 | Don't change the currentItem after a viewport resize | dev | qt/qtdeclarative | Status: MERGED | +2 | 0 |